-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
5.15.15, 6.2.10, 6.5.3, 6.6.0
-
d51847e32 (dev), 8e9bd27e2 (6.6)
Code
import QtQuick 2.15 import QtQuick.Window 2.15 import QtQuick.Controls 2.15 Window { id: window width: 640 height: 480 visible: true Overlay.overlay.rotation: slider.value Column { Slider { id: slider from: 0 to: 360 } Text { text: `Rotation: ${slider.value.toFixed(1)}°` } } Popup { id: popup anchors.centerIn: parent width: 320 height: 240 modal: false closePolicy: Popup.NoAutoClose Text { anchors.centerIn: parent text: "Hello" } } Component.onCompleted: popup.open() }
Steps to reproduce
- Run the code above
- Move the slider to a value that is not 0° or 360°
- Resize the window
- Repeat Steps #2 and #3 multiple times, using different slider values
Expected Outcome
At Step #3, the Popup's rotation remains unchanged (== slider.value)
Actual Outcome
At Step #3, the Popup's rotation resets to 0
Workaround
Instead of binding Overlay.overlay.rotation: slider.value, use a Transform:
Overlay.overlay.transform: Rotation {
angle: slider.value
origin.x: window.Overlay.overlay.width / 2
origin.y: window.Overlay.overlay.height / 2
}
- relates to
-
QTBUG-115536 Setting Window.contentOrientation breaks Popup on regular desktop
-
- Open
-
-
QTBUG-122962 Bindings on Overlay's size and position are not respected
-
- Open
-
- resulted from
-
QTBUG-62158 [QQC2] orientation change breaks the position and size of the Popup
-
- Closed
-
| For Gerrit Dashboard: QTBUG-118460 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 516425,4 | QQuickOverlay: don't reset rotation during resize if we don't have to | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 516642,2 | QQuickOverlay: don't reset rotation during resize if we don't have to | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |